# IM-PIR

./: .gitignore  README.md
plots/: plot.py  run.sh
plots/scripts/: figure10.plot  figure3.plot  figure9.plot
src/: CMakeLists.txt  cpu_bench.cpp  datastore.cpp  datastore.h  dpf.cpp  dpf.h  pim_bench.cpp  test.cpp
src/dpf/: dpf.cpp  dpf.h
src/dpu/: common.h  dpu_task.c  dpu_task_2.c  dpu_task_old_.c  dpu_task_single_batch.c  task_old.c
src/prf/: AES.cpp  AES.h  PRNG.cpp  PRNG.h
src/util/: Defines.h  alignment_allocator.h  profiler.h  queue.h
